samples/_failures_safe/1761599381_871aa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f25849b.c: In function ‘main’:
./samples/SAFE/__tmp_2f25849b.c:134:20: error: missing terminating " character
  134 |             printf("Result of
      |                    ^~~~~~~~~~
./samples/SAFE/__tmp_2f25849b.c:134:13: error: expected expression at end of input
  134 |             printf("Result of
      |             ^~~~~~
./samples/SAFE/__tmp_2f25849b.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f25849b.c:134:13: error: expected declaration or statement at end of input
